# SvnAiReviewer

./: AGENTS.md  LINUX_BUILD.md  MANIFEST.in  README.md  batch_processor.py  build.bat  build.sh  cli.py  config.yaml.example  config_manager.py  log_generator.py  package.bat  prompt_builder.py  pyproject.toml  release.bat  report_generator.py  requirements.txt  svn-ai.spec  svn_client.py
ai_provider/: __init__.py  base.py  cloud_provider.py  factory.py  local_provider.py
commands/: __init__.py  config_cmd.py  generate_log_cmd.py  review.py
models/: __init__.py  diff_data.py  log_data.py
svn_ai_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: __init__.py  commit_log_prompt.md  report_template.md  review_prompt.md  system_prompt.md
tests/: test_ai_provider.py  test_batch_processor.py  test_cli.py  test_config_manager.py  test_log_generator.py  test_prompt_builder.py  test_report_generator.py  test_svn_client.py
